k3s/dns/adguard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: dns
spec:
  ingressClassName: traefik
  rules:
    - host: placeholder.local
      http:
        paths:
          - path: /control/install
            pathType: Prefix
            backend:
              service:
                name: adguard-setup
                port:
                  number: 3000

          - path: /install
            pathType: Prefix
            backend:
              service:
                name: adguard-setup
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 80
